# SkillOps

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_skillops.py
docs/: ARTIFACT.md
examples/: demo.py
skillops/: __init__.py  cli.py  llm_client.py  maintenance.py  planner.py  skill_graph.py
tests/: test_smoke.py
