[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillops"
version = "0.1.0"
description = "SkillOps: a self-maintaining framework with hierarchical skill graphs for self-growing agent skill ecosystems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "SkillOps Authors" }]
keywords = ["llm", "agents", "skills", "graph", "planning", "maintenance"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "openai>=1.50.0",
  "tiktoken>=0.7.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
skillops = "skillops.cli:main"

[tool.setuptools.packages.find]
include = ["skillops*"]
